# llvm-passes

./: .gitignore  CMakeLists.txt  LICENSE  check_cmake.sh  check_openssl.sh  check_zlib.sh
cmake/: Python.cmake
doc/: llvm_obfuscation_tutorial.rst
doc/X-OR_tutorial/: Makefile  X-OR_tutorial.rst  simple.dot  split.dot
llvm-passes/: CMakeLists.txt
llvm-passes/ObfuscateVar/: ObfuscateVar.cpp
llvm-passes/ObfuscateZero/: ObfuscateZero.cpp
llvm-passes/PropagatedTransformation/: PropagatedTransformation.hpp
llvm-passes/SplitBitwiseOp/: SplitBitwiseOp.cpp
llvm-passes/X-OR/: X-OR.cpp
tests/: lit.cfg.in  lit.site.cfg
tests/ObfuscateVar/: basic.c
tests/ObfuscateZero/: basic_test.c  check_openssl.sh  check_zlib.sh  null_pointer_test.c  test_gep.c  test_maxint.cpp
tests/SplitBitwiseOp/: check_openssl.sh  check_zlib.sh  sbo_and.c  sbo_max.c  sbo_max32.c  sbo_max_chained.c  sbo_or.c  sbo_xor.c
tests/X-OR/: check_openssl.sh  check_zlib.sh  xor.c  xor_bigint.c  xor_bool.cpp  xor_bool_1bit.ll  xor_bool_1bit_openssl_false.ll  xor_bool_1bit_openssl_true.ll  xor_chained.c  xor_complex_tree.c  xor_max.c  xor_max32.c  xor_max_chained.c  xor_multiple_roots.c  xor_simple_chain.c  xor_stress_tree_base.c
